crates/archon-tui/tests/snapshots/tui_snapshots__statusbar_with_branch_and_agent.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: bar.format()
---
[code-reviewer] | claude-opus-4-7 | spoof | ask | $1.23 | main
