crates/archon-tui/tests/snapshots/tui_snapshots__syntax_plain_code_no_language.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: lines
---
[
    Line::from(Span::from("fn main() { println!(\"hi\"); }").white().bg(Color::Rgb(30, 30, 40))),
]
