crates/archon-tui/tests/snapshots/tui_snapshots__theme_palettes_all_22.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: all
---
=== intj ===
Theme {
    bg: Black,
    fg: Rgb(
        200,
        200,
        210,
    ),
    accent: Rgb(
        0,
        180,
        180,
    ),
    accent_secondary: Rgb(
        130,
        80,
        200,
    ),
    header: Rgb(
        0,
        220,
        220,
    ),
    muted: DarkGray,
    error: Rgb(
        200,
        60,
        60,
    ),
    success: Rgb(
        0,
        200,
        120,
    ),
    warning: Rgb(
        200,
        180,
        0,
    ),
    border: Rgb(
        60,
        60,
        120,
    ),
    border_active: Rgb(
        80,
        120,
        220,
    ),
    thinking_dot: Rgb(
        0,
        180,
        180,
    ),
    thinking_dot_bright: Rgb(
        0,
        255,
        255,
    ),
}

=== intp ===
Theme {
    bg: Rgb(
        8,
        12,
        20,
    ),
    fg: Rgb(
        180,
        185,
        205,
    ),
    accent: Rgb(
        80,
        130,
        200,
    ),
    accent_secondary: Rgb(
        100,
        100,
        160,
    ),
    header: Rgb(
        130,
        175,
        245,
    ),
    muted: Rgb(
        70,
        80,
        100,
    ),
    error: Rgb(
        200,
        60,
        60,
    ),
    success: Rgb(
        60,
        200,
        120,
    ),
    warning: Rgb(
        200,
        180,
        40,
    ),
    border: Rgb(
        35,
        45,
        75,
    ),
    border_active: Rgb(
        80,
        130,
        200,
    ),
    thinking_dot: Rgb(
        80,
        130,
        200,
    ),
    thinking_dot_bright: Rgb(
        160,
        205,
        255,
    ),
}

=== entj ===
Theme {
    bg: Rgb(
        8,
        8,
        18,
    ),
    fg: Rgb(
        225,
        215,
        185,
    ),
    accent: Rgb(
        200,
        160,
        20,
    ),
    accent_secondary: Rgb(
        40,
        80,
        180,
    ),
    header: Rgb(
        245,
        200,
        40,
    ),
    muted: Rgb(
        100,
        90,
        60,
    ),
    error: Rgb(
        220,
        60,
        40,
    ),
    success: Rgb(
        60,
        200,
        100,
    ),
    warning: Rgb(
        240,
        160,
        20,
    ),
    border: Rgb(
        55,
        45,
        15,
    ),
    border_active: Rgb(
        200,
        160,
        20,
    ),
    thinking_dot: Rgb(
        200,
        160,
        20,
    ),
    thinking_dot_bright: Rgb(
        255,
        220,
        80,
    ),
}

=== entp ===
Theme {
    bg: Rgb(
        5,
        15,
        15,
    ),
    fg: Rgb(
        180,
        240,
        205,
    ),
    accent: Rgb(
        0,
        220,
        150,
    ),
    accent_secondary: Rgb(
        80,
        200,
        255,
    ),
    header: Rgb(
        100,
        255,
        185,
    ),
    muted: Rgb(
        60,
        100,
        80,
    ),
    error: Rgb(
        220,
        80,
        60,
    ),
    success: Rgb(
        0,
        220,
        150,
    ),
    warning: Rgb(
        200,
        200,
        40,
    ),
    border: Rgb(
        15,
        70,
        55,
    ),
    border_active: Rgb(
        0,
        200,
        150,
    ),
    thinking_dot: Rgb(
        0,
        220,
        150,
    ),
    thinking_dot_bright: Rgb(
        100,
        255,
        205,
    ),
}

=== infj ===
Theme {
    bg: Rgb(
        10,
        5,
        20,
    ),
    fg: Rgb(
        210,
        190,
        235,
    ),
    accent: Rgb(
        140,
        80,
        220,
    ),
    accent_secondary: Rgb(
        80,
        120,
        200,
    ),
    header: Rgb(
        185,
        125,
        255,
    ),
    muted: Rgb(
        80,
        60,
        100,
    ),
    error: Rgb(
        220,
        60,
        80,
    ),
    success: Rgb(
        60,
        200,
        130,
    ),
    warning: Rgb(
        200,
        160,
        40,
    ),
    border: Rgb(
        50,
        28,
        80,
    ),
    border_active: Rgb(
        140,
        80,
        220,
    ),
    thinking_dot: Rgb(
        140,
        80,
        220,
    ),
    thinking_dot_bright: Rgb(
        205,
        155,
        255,
    ),
}

=== infp ===
Theme {
    bg: Rgb(
        15,
        8,
        15,
    ),
    fg: Rgb(
        235,
        215,
        225,
    ),
    accent: Rgb(
        200,
        100,
        160,
    ),
    accent_secondary: Rgb(
        160,
        100,
        200,
    ),
    header: Rgb(
        245,
        145,
        195,
    ),
    muted: Rgb(
        100,
        70,
        90,
    ),
    error: Rgb(
        220,
        60,
        80,
    ),
    success: Rgb(
        80,
        200,
        130,
    ),
    warning: Rgb(
        220,
        170,
        60,
    ),
    border: Rgb(
        80,
        38,
        58,
    ),
    border_active: Rgb(
        200,
        100,
        160,
    ),
    thinking_dot: Rgb(
        200,
        100,
        160,
    ),
    thinking_dot_bright: Rgb(
        255,
        165,
        205,
    ),
}

=== enfj ===
Theme {
    bg: Rgb(
        20,
        10,
        5,
    ),
    fg: Rgb(
        245,
        225,
        195,
    ),
    accent: Rgb(
        220,
        140,
        20,
    ),
    accent_secondary: Rgb(
        180,
        80,
        40,
    ),
    header: Rgb(
        255,
        185,
        45,
    ),
    muted: Rgb(
        120,
        90,
        60,
    ),
    error: Rgb(
        220,
        60,
        40,
    ),
    success: Rgb(
        60,
        200,
        100,
    ),
    warning: Rgb(
        240,
        180,
        20,
    ),
    border: Rgb(
        95,
        55,
        18,
    ),
    border_active: Rgb(
        220,
        140,
        20,
    ),
    thinking_dot: Rgb(
        220,
        140,
        20,
    ),
    thinking_dot_bright: Rgb(
        255,
        205,
        85,
    ),
}

=== enfp ===
Theme {
    bg: Rgb(
        20,
        10,
        5,
    ),
    fg: Rgb(
        252,
        235,
        205,
    ),
    accent: Rgb(
        255,
        120,
        60,
    ),
    accent_secondary: Rgb(
        255,
        200,
        40,
    ),
    header: Rgb(
        255,
        165,
        85,
    ),
    muted: Rgb(
        130,
        100,
        70,
    ),
    error: Rgb(
        220,
        50,
        50,
    ),
    success: Rgb(
        60,
        210,
        100,
    ),
    warning: Rgb(
        255,
        200,
        40,
    ),
    border: Rgb(
        115,
        58,
        18,
    ),
    border_active: Rgb(
        255,
        120,
        60,
    ),
    thinking_dot: Rgb(
        255,
        120,
        60,
    ),
    thinking_dot_bright: Rgb(
        255,
        205,
        125,
    ),
}

=== istj ===
Theme {
    bg: Rgb(
        5,
        10,
        8,
    ),
    fg: Rgb(
        200,
        210,
        195,
    ),
    accent: Rgb(
        80,
        140,
        80,
    ),
    accent_secondary: Rgb(
        40,
        80,
        120,
    ),
    header: Rgb(
        105,
        185,
        105,
    ),
    muted: Rgb(
        70,
        90,
        70,
    ),
    error: Rgb(
        200,
        60,
        60,
    ),
    success: Rgb(
        80,
        200,
        80,
    ),
    warning: Rgb(
        200,
        180,
        40,
    ),
    border: Rgb(
        28,
        55,
        28,
    ),
    border_active: Rgb(
        80,
        140,
        80,
    ),
    thinking_dot: Rgb(
        80,
        140,
        80,
    ),
    thinking_dot_bright: Rgb(
        140,
        225,
        140,
    ),
}

=== isfj ===
Theme {
    bg: Rgb(
        18,
        12,
        8,
    ),
    fg: Rgb(
        235,
        215,
        195,
    ),
    accent: Rgb(
        180,
        120,
        60,
    ),
    accent_secondary: Rgb(
        160,
        140,
        80,
    ),
    header: Rgb(
        225,
        165,
        85,
    ),
    muted: Rgb(
        105,
        80,
        60,
    ),
    error: Rgb(
        210,
        60,
        50,
    ),
    success: Rgb(
        80,
        190,
        80,
    ),
    warning: Rgb(
        220,
        175,
        40,
    ),
    border: Rgb(
        78,
        52,
        28,
    ),
    border_active: Rgb(
        180,
        120,
        60,
    ),
    thinking_dot: Rgb(
        180,
        120,
        60,
    ),
    thinking_dot_bright: Rgb(
        242,
        185,
        105,
    ),
}

=== estj ===
Theme {
    bg: Rgb(
        8,
        8,
        15,
    ),
    fg: Rgb(
        220,
        218,
        212,
    ),
    accent: Rgb(
        40,
        80,
        180,
    ),
    accent_secondary: Rgb(
        180,
        40,
        40,
    ),
    header: Rgb(
        85,
        145,
        225,
    ),
    muted: Rgb(
        80,
        80,
        95,
    ),
    error: Rgb(
        200,
        50,
        50,
    ),
    success: Rgb(
        50,
        200,
        100,
    ),
    warning: Rgb(
        210,
        170,
        30,
    ),
    border: Rgb(
        28,
        38,
        78,
    ),
    border_active: Rgb(
        40,
        80,
        180,
    ),
    thinking_dot: Rgb(
        40,
        80,
        180,
    ),
    thinking_dot_bright: Rgb(
        105,
        165,
        255,
    ),
}

=== esfj ===
Theme {
    bg: Rgb(
        20,
        10,
        12,
    ),
    fg: Rgb(
        245,
        225,
        225,
    ),
    accent: Rgb(
        220,
        80,
        120,
    ),
    accent_secondary: Rgb(
        240,
        140,
        80,
    ),
    header: Rgb(
        255,
        125,
        155,
    ),
    muted: Rgb(
        120,
        80,
        95,
    ),
    error: Rgb(
        220,
        50,
        70,
    ),
    success: Rgb(
        60,
        200,
        110,
    ),
    warning: Rgb(
        240,
        175,
        40,
    ),
    border: Rgb(
        98,
        38,
        58,
    ),
    border_active: Rgb(
        220,
        80,
        120,
    ),
    thinking_dot: Rgb(
        220,
        80,
        120,
    ),
    thinking_dot_bright: Rgb(
        255,
        165,
        195,
    ),
}

=== istp ===
Theme {
    bg: Rgb(
        8,
        10,
        10,
    ),
    fg: Rgb(
        200,
        208,
        200,
    ),
    accent: Rgb(
        140,
        160,
        160,
    ),
    accent_secondary: Rgb(
        100,
        120,
        100,
    ),
    header: Rgb(
        185,
        205,
        205,
    ),
    muted: Rgb(
        80,
        92,
        85,
    ),
    error: Rgb(
        200,
        70,
        60,
    ),
    success: Rgb(
        80,
        195,
        100,
    ),
    warning: Rgb(
        200,
        185,
        50,
    ),
    border: Rgb(
        48,
        58,
        55,
    ),
    border_active: Rgb(
        140,
        160,
        160,
    ),
    thinking_dot: Rgb(
        140,
        160,
        160,
    ),
    thinking_dot_bright: Rgb(
        212,
        235,
        235,
    ),
}

=== isfp ===
Theme {
    bg: Rgb(
        15,
        12,
        8,
    ),
    fg: Rgb(
        228,
        218,
        202,
    ),
    accent: Rgb(
        180,
        150,
        80,
    ),
    accent_secondary: Rgb(
        140,
        100,
        80,
    ),
    header: Rgb(
        225,
        195,
        105,
    ),
    muted: Rgb(
        112,
        96,
        75,
    ),
    error: Rgb(
        210,
        65,
        55,
    ),
    success: Rgb(
        80,
        195,
        95,
    ),
    warning: Rgb(
        215,
        185,
        50,
    ),
    border: Rgb(
        78,
        62,
        38,
    ),
    border_active: Rgb(
        180,
        150,
        80,
    ),
    thinking_dot: Rgb(
        180,
        150,
        80,
    ),
    thinking_dot_bright: Rgb(
        242,
        212,
        132,
    ),
}

=== estp ===
Theme {
    bg: Rgb(
        20,
        5,
        5,
    ),
    fg: Rgb(
        242,
        222,
        202,
    ),
    accent: Rgb(
        220,
        50,
        30,
    ),
    accent_secondary: Rgb(
        240,
        140,
        0,
    ),
    header: Rgb(
        255,
        85,
        55,
    ),
    muted: Rgb(
        120,
        70,
        60,
    ),
    error: Rgb(
        255,
        40,
        40,
    ),
    success: Rgb(
        60,
        210,
        80,
    ),
    warning: Rgb(
        240,
        160,
        20,
    ),
    border: Rgb(
        98,
        28,
        18,
    ),
    border_active: Rgb(
        220,
        50,
        30,
    ),
    thinking_dot: Rgb(
        220,
        50,
        30,
    ),
    thinking_dot_bright: Rgb(
        255,
        125,
        85,
    ),
}

=== esfp ===
Theme {
    bg: Rgb(
        20,
        10,
        15,
    ),
    fg: Rgb(
        252,
        242,
        212,
    ),
    accent: Rgb(
        240,
        180,
        0,
    ),
    accent_secondary: Rgb(
        220,
        60,
        140,
    ),
    header: Rgb(
        255,
        225,
        45,
    ),
    muted: Rgb(
        122,
        102,
        82,
    ),
    error: Rgb(
        220,
        50,
        80,
    ),
    success: Rgb(
        60,
        210,
        100,
    ),
    warning: Rgb(
        240,
        200,
        20,
    ),
    border: Rgb(
        98,
        68,
        18,
    ),
    border_active: Rgb(
        240,
        180,
        0,
    ),
    thinking_dot: Rgb(
        240,
        180,
        0,
    ),
    thinking_dot_bright: Rgb(
        255,
        242,
        85,
    ),
}

=== dark ===
Theme {
    bg: Black,
    fg: White,
    accent: Cyan,
    accent_secondary: Magenta,
    header: Cyan,
    muted: DarkGray,
    error: Red,
    success: Green,
    warning: Yellow,
    border: DarkGray,
    border_active: Cyan,
    thinking_dot: Cyan,
    thinking_dot_bright: White,
}

=== light ===
Theme {
    bg: White,
    fg: Black,
    accent: Blue,
    accent_secondary: Magenta,
    header: Blue,
    muted: DarkGray,
    error: Red,
    success: Green,
    warning: Yellow,
    border: DarkGray,
    border_active: Blue,
    thinking_dot: Blue,
    thinking_dot_bright: Cyan,
}

=== ocean ===
Theme {
    bg: Rgb(
        5,
        20,
        40,
    ),
    fg: Rgb(
        180,
        210,
        240,
    ),
    accent: Rgb(
        0,
        150,
        220,
    ),
    accent_secondary: Rgb(
        0,
        200,
        200,
    ),
    header: Rgb(
        100,
        200,
        255,
    ),
    muted: Rgb(
        80,
        100,
        130,
    ),
    error: Rgb(
        220,
        80,
        80,
    ),
    success: Rgb(
        0,
        200,
        140,
    ),
    warning: Rgb(
        220,
        180,
        0,
    ),
    border: Rgb(
        30,
        60,
        100,
    ),
    border_active: Rgb(
        0,
        120,
        200,
    ),
    thinking_dot: Rgb(
        0,
        150,
        220,
    ),
    thinking_dot_bright: Rgb(
        100,
        220,
        255,
    ),
}

=== fire ===
Theme {
    bg: Rgb(
        20,
        5,
        5,
    ),
    fg: Rgb(
        240,
        210,
        180,
    ),
    accent: Rgb(
        220,
        80,
        20,
    ),
    accent_secondary: Rgb(
        200,
        160,
        0,
    ),
    header: Rgb(
        255,
        120,
        40,
    ),
    muted: Rgb(
        120,
        80,
        60,
    ),
    error: Rgb(
        255,
        60,
        60,
    ),
    success: Rgb(
        80,
        200,
        80,
    ),
    warning: Rgb(
        255,
        200,
        0,
    ),
    border: Rgb(
        100,
        40,
        20,
    ),
    border_active: Rgb(
        220,
        80,
        20,
    ),
    thinking_dot: Rgb(
        220,
        80,
        20,
    ),
    thinking_dot_bright: Rgb(
        255,
        160,
        60,
    ),
}

=== forest ===
Theme {
    bg: Rgb(
        5,
        20,
        10,
    ),
    fg: Rgb(
        190,
        220,
        190,
    ),
    accent: Rgb(
        40,
        180,
        80,
    ),
    accent_secondary: Rgb(
        120,
        160,
        40,
    ),
    header: Rgb(
        80,
        220,
        100,
    ),
    muted: Rgb(
        80,
        110,
        80,
    ),
    error: Rgb(
        220,
        80,
        60,
    ),
    success: Rgb(
        60,
        220,
        100,
    ),
    warning: Rgb(
        200,
        180,
        40,
    ),
    border: Rgb(
        30,
        80,
        40,
    ),
    border_active: Rgb(
        40,
        160,
        80,
    ),
    thinking_dot: Rgb(
        40,
        180,
        80,
    ),
    thinking_dot_bright: Rgb(
        100,
        255,
        120,
    ),
}

=== mono ===
Theme {
    bg: Black,
    fg: White,
    accent: White,
    accent_secondary: DarkGray,
    header: White,
    muted: DarkGray,
    error: White,
    success: White,
    warning: White,
    border: DarkGray,
    border_active: White,
    thinking_dot: DarkGray,
    thinking_dot_bright: White,
}
