crates/archon-tui/tests/snapshots/tui_snapshots__thinking_state_after_two_deltas_and_complete.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: repr
---
has_content=true
bright_dot_index=0
