crates/archon-tui/tests/snapshots/tui_snapshots__tool_output_state_error_brief_line.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: state.brief_line()
---
▶ read_file -- error
