crates/archon-tui/tests/snapshots/tui_snapshots__tool_output_state_error_collapsed_line.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: state.collapsed_line()
---
▶ Tool: read_file -- error ENOENT
